# /*******************************************************************************
#  Copyright (C) 2021 Xilinx, Inc
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
# *******************************************************************************/

[metadata]
name = pyaccl
version = 0.2
author = Lucian Petrica
author_email = lucianp@amd.com
license = Apache License 2.0
platforms = any
description = Python bindings for the Alveo Collectives Communication Library (ACCL)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xilinx/pyaccl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pynq>=2.7
    numpy
    pyzmq
    ipaddress

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-mpi
    mpi4py

[options.entry_points]
pynq.notebooks =
    pyaccl = pyaccl.notebooks

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --verbose
markers =
    alveo: marks tests that require an Alveo board (deselect with '-m "not alveo"')
testpaths = tests
